--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL = "https://api.github.com"
-REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_TOKEN="yourtokenhere"
